# fg-os

./: CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml
boot/: CMakeLists.txt
boot/grub/: grub.cfg
boot/src/: multiboot_header.asm
docs/: ARCHITECTURE.md
graphics/: CMakeLists.txt
kernel/: CMakeLists.txt  linker.ld
kernel/arch/x86_64/: arch.h  arch_stubs.c
kernel/drivers/: device.c  device.h
kernel/drivers/bus/: pci.c  pci.h
kernel/drivers/input/: keyboard.h
kernel/drivers/storage/: ata.h
kernel/fs/: ext4.c  ext4.h  fat32.c  fat32.h  fgfs.c  fgfs.h  fs.c  fs.h
kernel/hal/: hal.c  hal.h  x86_64_hal.c
kernel/include/: boot.h  kernel.h  panic.h  syscall.h  types.h
kernel/interrupt/: idt.c  idt.h  interrupt.c  interrupt.h
kernel/mm/: heap.c  memory.h  memory_utils.c  pmm.c  vmm.c
kernel/sched/: process.c  scheduler.c  scheduler.h  thread.c
kernel/src/: boot.c  console_stub.c  main.c  panic.c  string_stubs.c  test_main.c  test_phase10.c  test_phase11.c  test_phase7.c  test_phase8.c  test_phase9.c
libs/: CMakeLists.txt
scripts/: build.sh  setup-environment.sh
tests/: CMakeLists.txt
tests/framework/: test_framework.c
tests/include/: test_framework.h
tests/phase5/: test_memory.c
tools/: CMakeLists.txt
